contrib/tree-sitter-parsley/grammar.js
    source_file: ($) => repeat($._statement),

    // ================================================================
    // Statements — parser.go L292-370 (parseStatement)
    // ================================================================

    _statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.dict_destructuring_assignment,
        $.export_statement,
        $.return_statement,
        $.check_statement,
        $.expression_statement,
      ),

    // parser.go L499-669 (parseLetStatement)
    // Forms: let x = expr, let {a,b} = expr, let [a,b] = expr
    // Also: let x <== expr, let x <=/= expr
    let_statement: ($) =>
      seq(
        choice("let", "var"),
        field("pattern", $._pattern),
        field("operator", choice("=", "<==", "<=/=")),
        field("value", $._expression),
      ),

    // parser.go L673-730 (parseAssignmentStatement)
    // Forms: x = expr, obj.name = expr, arr[0] = expr
    // Also: x <== expr, x <=/= expr
    assignment_statement: ($) =>
      prec.right(
        PREC.LOWEST,
        seq(
          field(
            "left",
            choice($.identifier, $.member_expression, $.index_expression),
          ),
          field("operator", choice("=", "<==", "<=/=")),
          field("right", $._expression),
        ),
      ),

    // parser.go L733-790 (parseDictDestructuringAssignment)
    // Form: {a, b} = expr, {a, b} <== expr
    dict_destructuring_assignment: ($) =>
      prec.dynamic(
        1,
        seq(
          field("pattern", $.dictionary_pattern),
          field("operator", choice("=", "<==", "<=/=")),
          field("value", $._expression),
        ),
      ),

    // parser.go L379-496 (parseExportStatement, parseComputedExportStatement)
    // Forms:
    //   export let pattern = expr
    //   export name = expr
    //   export name              (bare export)
    //   export computed name = expr
    //   export computed name { body }
    //   export @schema Name { ... }
    //   export {a,b} = expr
    export_statement: ($) =>
      prec.right(
        seq(
          "export",
          choice(
            // export let/var pattern = expr
            seq(
              choice("let", "var"),
              field("pattern", $._pattern),
              "=",
              field("value", $._expression),
            ),
            // export computed name = expr | export computed name { body }
            seq(
              "computed",
              field("name", $.identifier),
              choice(
                seq("=", field("value", $._expression)),
                field("value", $.block),
              ),
            ),
            // export @schema — passes through to expression
            seq(field("value", $.schema_declaration)),
            // export name = expr
            seq(
              field("name", $.identifier),
              "=",
              field("value", $._expression),
            ),
            // export {a,b} = expr
            seq(
              field("pattern", $.dictionary_pattern),
              "=",
              field("value", $._expression),
            ),
            // export name (bare export)
            field("name", $.identifier),
          ),
        ),
      ),

    // parser.go L793-805 (parseReturnStatement)
    return_statement: ($) =>
      prec.right(seq("return", optional(field("value", $._expression)))),

    // parser.go L808-828 (parseCheckStatement)
    // check CONDITION else VALUE — else is REQUIRED
    check_statement: ($) =>
      seq(
        "check",
        field("condition", $._expression),
        "else",
        field("fallback", $._expression),
      ),

    // parser.go L863-945 (parseExpressionStatement)
    expression_statement: ($) => $._expression,

    // ================================================================
    // Expressions — parser.go L957-1012 (parseExpression)
    // ================================================================

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.prefix_expression,
        $.read_expression,
        $.fetch_expression,
        $.infix_expression,
        $.not_in_expression,
        $.is_expression,
        $.write_expression,
        $.call_expression,
        $.index_expression,
        $.slice_expression,
        $.member_expression,
        $.function_expression,
        $.if_expression,
        $.for_expression,
        $.try_expression,
        $.import_expression,
        $.tag_expression,
        $.parenthesized_expression,
        $.block,
        $.schema_declaration,
        $.table_expression,
        $.query_expression,
        $.mutation_expression,
      ),

    infix_expression: ($) =>
      choice(
        // PRODUCT: * / % — parser.go precedences map
        ...[
          ["*", PREC.PRODUCT],
          ["/", PREC.PRODUCT],
          ["%", PREC.PRODUCT],
        ].map(([op, prec_val]) =>
          prec.left(
            prec_val,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // CONCAT: ++
        prec.left(
          PREC.CONCAT,
          seq(
            field("left", $._expression),
            field("operator", "++"),
            field("right", $._expression),
          ),
        ),
        // SUM: + - ..
        ...["+", "-", ".."].map((op) =>
          prec.left(
            PREC.SUM,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // COMPARE: < > <= >=
        ...["<", ">", "<=", ">="].map((op) =>
          prec.left(
            PREC.COMPARE,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // EQUALS: == != ~ !~ in
        ...["==", "!=", "~", "!~", "in"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // AND: and && &
        ...["and", "&&", "&"].map((op) =>
          prec.left(
            PREC.AND,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // OR: or || | ??
        ...["or", "||", "|", "??"].map((op) =>
          prec.left(
            PREC.OR,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Database operators at EQUALS: <=?=> <=??=> <=!=>
        ...["<=?=>", "<=??=>", "<=!=>"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Process execution at EQUALS: <=#=>
        prec.left(
          PREC.EQUALS,
          seq(
            field("left", $._expression),
            field("operator", "<=#=>"),
            field("right", $._expression),
          ),
        ),
      ),

    // File I/O write operators at COMMA precedence — parser.go parseExpression special handling
    // ==> ==>> =/=> =/=>>
    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(field("function", $._expression), field("arguments", $.arguments)),
      ),

    arguments: ($) => seq("(", commaSep($._expression), ")"),

    // parser.go L2579-2613 (parseIndexOrSliceExpression)
    index_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          "[",
          optional("?"),
          field("index", $._expression),
          "]",
        ),
      ),

    // parser.go L2615-2637 (parseSliceExpression)
    member_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          ".",
          field("property", choice($.identifier, alias("as", $.identifier))),
        ),
      ),

    // ================================================================
    // Functions and blocks — parser.go L2286-2385
    // ================================================================

    // parser.go L2286-2301 (parseBlockStatement)
    block: ($) => seq("{", repeat($._statement), "}"),

    // parser.go L2303-2327 (parseFunctionLiteral)
    // Body is ALWAYS a block — no expression bodies
    for_expression: ($) =>
      prec.right(
        PREC.LOWEST,
        seq(
          "for",
          choice(
            // Iteration with parens: for (x in arr) { body } or for (k, v in dict) { body }
            // prec.dynamic(10) to prefer iteration over mapping when ambiguous
            prec.dynamic(
              10,
              seq(
                "(",
                optional(seq(field("key", $.identifier), ",")),
                field("variable", $._pattern),
                "in",
                field("iterable", $._expression),
                ")",
                field("body", $.block),
              ),
            ),
            // Iteration without parens: for x in arr { body }
            prec.dynamic(
              10,
              seq(
                optional(seq(field("key", $.identifier), ",")),
                field("variable", $._pattern),
                "in",
                field("iterable", $._expression),
                field("body", $.block),
              ),
            ),
            // Mapping form: for (iterable) function — REQUIRES parens
            seq(
              "(",
              field("iterable", $._expression),
              ")",
              field("mapper", $._expression),
            ),
          ),
        ),
      ),

    // parser.go L1838-1863 (parseTryExpression)
    // try must be followed by a call expression
    _pattern: ($) =>
      choice(
        $.identifier,
        $.array_pattern,
        $.dictionary_pattern,
        alias("_", $.identifier),
      ),

    // parser.go L3193-3250 (parseArrayDestructuringPattern)
    array_pattern: ($) =>
      seq(
        "[",
        commaSep(choice($._pattern, seq("...", optional($.identifier)))),
        "]",
      ),

    // parser.go L3100-3190 (parseDictDestructuringPattern)
    dictionary_pattern: ($) =>
      seq(
        "{",
        commaSep(
          choice(
            // key: nested_pattern
            seq(field("key", $.identifier), ":", field("value", $._pattern)),
            // key as alias
            seq(field("key", $.identifier), "as", field("alias", $.identifier)),
            // simple key (shorthand)
            $.identifier,
            // rest: ...identifier
            seq("...", optional($.identifier)),
          ),
        ),
        "}",
      ),

    // ================================================================
    // Schema declarations — parser.go L3253-3410 (Phase 2 basic support)
    // ================================================================

    // parser.go L3253-3293 (parseSchemaDeclaration)
    query_expression: ($) => seq("@query", "(", optional($.query_body), ")"),

    query_body: ($) =>
      seq(
        $.query_source,
        repeat($.query_clause),
        optional($.query_group_by),
        optional($.query_terminal),
      ),

    query_source: ($) =>
      seq(
        field("table", $.identifier),
        optional(seq("as", field("alias", $.identifier))),
      ),

    // Pipe-separated clauses: conditions, modifiers, computed fields
    query_clause: ($) =>
      seq(
        "|",
        choice(
          $.query_condition_group,
          $.query_condition,
          $.query_modifier,
          $.query_computed_field,
        ),
      ),

    // Condition: field op value OR field between X and Y OR field is [not] null
    query_condition: ($) =>
      choice(
        seq(
          optional(choice("not", "!")),
          $.query_field_ref,
          $.query_operator,
          $.query_value,
        ),
        // between has special syntax: field between X and Y
        seq(
          optional(choice("not", "!")),
          $.query_field_ref,
          "between",
          $.query_value,
          "and",
          $.query_value,
        ),
        // is null / is not null don't take a value
        seq(
          optional(choice("not", "!")),
          $.query_field_ref,
          $.query_null_check,
        ),
      ),

    // is null / is not null - separate from query_operator since no value follows
    query_null_check: ($) =>
      choice(seq("is", "null"), seq("is", "not", "null")),

    // Grouped conditions: (cond1 or cond2 and cond3)
    query_condition_group: ($) =>
      seq(
        optional(choice("not", "!")),
        "(",
        $.query_condition,
        repeat(seq(choice("and", "or"), $.query_condition)),
        ")",
      ),

    // Field reference: field or table.field
    query_field_ref: ($) =>
      choice($.identifier, seq($.identifier, ".", $.identifier)),

    // Comparison operators (excluding between and is null which have special syntax)
    query_operator: ($) =>
      choice("==", "!=", "<", ">", "<=", ">=", "in", seq("not", "in"), "like"),

    // Value in a condition: interpolation, literal, or column ref
    query_value: ($) =>
      choice(
        $.query_interpolation,
        $.string,
        $.number,
        $.boolean,
        $.array_literal,
        $.query_column_ref,
      ),

    // Interpolated Parsley expression: {expr}
    query_interpolation: ($) => seq("{", $._expression, "}"),

    // Column reference (bare identifier or table.field in query context)
    query_column_ref: ($) =>
      prec.right(choice($.identifier, seq($.identifier, ".", $.identifier))),

    // Modifiers: order, limit, offset, with
    query_modifier: ($) =>
      choice(
        $.query_order_modifier,
        $.query_limit_modifier,
        $.query_offset_modifier,
        $.query_with_modifier,
      ),

    query_order_modifier: ($) =>
      seq("order", $.query_order_field, repeat(seq(",", $.query_order_field))),

    query_order_field: ($) =>
      seq($.identifier, optional(choice("asc", "desc"))),

    query_limit_modifier: ($) => seq("limit", $.number),

    query_offset_modifier: ($) => seq("offset", $.number),

    query_computed_field: ($) =>
      choice(
        // Aggregate: total: count or total: sum(amount)
        seq(field("name", $.identifier), ":", $.query_aggregate),
        // Correlated subquery: items <-OrderItems | order.id == orderId ?-> count
        seq(field("name", $.identifier), "<-", $.query_subquery),
      ),

    query_aggregate: ($) =>
      choice(
        "count",
        seq(
          choice("count", "sum", "avg", "min", "max"),
          "(",
          $.identifier,
          ")",
        ),
        $.identifier, // bare field reference
      ),

    query_subquery: ($) =>
      prec.right(
        seq(
          field("table", $.identifier),
          repeat($.query_clause),
          optional($.query_terminal),
        ),
      ),

    // Group by: + by field1, field2
    query_group_by: ($) =>
      seq("+", "by", $.identifier, repeat(seq(",", $.identifier))),

    // Terminal: ?-> or ??-> followed by projection
    query_terminal: ($) =>
      seq(
        choice("?->", "??->", "?!->", "??!->", ".->", "."),
        optional($.query_projection),
      ),

    query_projection: ($) =>
      choice("*", "toSQL", seq($.identifier, repeat(seq(",", $.identifier)))),

    dictionary_literal: ($) =>
      prec.dynamic(
        -1,
        seq("{", commaSep(choice($.pair, $.computed_property)), "}"),
      ),
